// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PriceHistory mobile renders 1`] = `
<div
  class="container"
>
  <h2
    class="_styling-h2"
  >
    Preisverlauf
  </h2>
  <h3
    class="dateHeader"
  >
    Oktober 2019
  </h3>
  <div
    class="chart"
  >
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top-left tooltipLeft"
        id="tooltip-14"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              259 CHF
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-14"
        class="tooltip__button"
        type="button"
      >
        <div
          class="mobileBarWrapper"
        >
          <strong
            class="price"
          >
            <span>
              259 CHF
            </span>
          </strong>
          <div
            class="bar_notInRange"
            style="height: 31px;"
          />
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-15"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              235 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-15"
        class="tooltip__button"
        type="button"
      >
        <div
          class="mobileBarWrapper"
        >
          <strong
            class="price"
          >
            <span>
              235 €
            </span>
          </strong>
          <div
            class="bar_cheapest"
            style="height: 31px;"
          />
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-16"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              260 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-16"
        class="tooltip__button"
        type="button"
      >
        <div
          class="mobileBarWrapper"
        >
          <strong
            class="price"
          >
            <span>
              260 €
            </span>
          </strong>
          <div
            class="bar"
            style="height: 31px;"
          />
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-17"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              261 €
            </span>
             p.P.
          </div>
          4 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-17"
        class="tooltip__button"
        type="button"
      >
        <div
          class="mobileBarWrapper"
        >
          <strong
            class="price"
          >
            <span>
              261 €
            </span>
          </strong>
          <div
            class="bar"
            style="height: 31px;"
          />
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-18"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              254 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-18"
        class="tooltip__button"
        type="button"
      >
        <div
          class="mobileBarWrapper"
        >
          <strong
            class="price"
          >
            <span>
              254 €
            </span>
          </strong>
          <div
            class="bar"
            style="height: 31px;"
          />
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-19"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              239 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-19"
        class="tooltip__button"
        type="button"
      >
        <div
          class="mobileBarWrapper"
        >
          <strong
            class="price"
          >
            <span>
              239 €
            </span>
          </strong>
          <div
            class="bar"
            style="height: 31px;"
          />
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top-right tooltipRight"
        id="tooltip-20"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              239 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-20"
        class="tooltip__button"
        type="button"
      >
        <div
          class="mobileBarWrapper"
        >
          <strong
            class="price"
          >
            <span>
              239 €
            </span>
          </strong>
          <div
            class="bar"
            style="height: 31px;"
          />
        </div>
      </button>
    </div>
  </div>
  <div
    class="axisContainer"
  >
    <button
      class="button"
    >
      <svg
        aria-hidden="true"
        class="icon"
        viewBox="0 0 21 32"
      >
        <path
          d="M16.2 31.4l-15.4-15.4 15.4-15.4 3 2.8-12.6 12.6 12.6 12.6-3 2.8z"
        />
      </svg>
    </button>
    <div
      class="axis"
    >
      <time
        class="label"
        datetime="2019-10-15"
      >
        15 Di.
      </time>
      <time
        class="label"
        datetime="2019-10-16"
      >
        16 Mi.
      </time>
      <time
        class="label"
        datetime="2019-10-17"
      >
        17 Do.
      </time>
      <time
        class="label"
        datetime="2019-10-18"
      >
        18 Fr.
      </time>
      <time
        class="label"
        datetime="2019-10-19"
      >
        19 Sa.
      </time>
      <time
        class="label"
        datetime="2019-10-20"
      >
        20 So.
      </time>
      <time
        class="label"
        datetime="2019-10-21"
      >
        21 Mo.
      </time>
    </div>
    <button
      class="button"
    >
      <svg
        aria-hidden="true"
        class="icon"
        viewBox="0 0 21 32"
      >
        <path
          d="M3.483 32l-3.478-2.909 14.609-13.091-14.609-13.091 3.478-2.909 17.855 16-17.855 16z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`PriceHistory navigates to next view 1`] = `
<div
  class="container"
>
  <h2
    class="_styling-h2"
  >
    Preisverlauf
  </h2>
  <div
    class="chart"
  >
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-42"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              250 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-42"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar"
          style="height: 74px;"
        >
          <strong
            class="price"
          >
            <span>
              250 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-43"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              272 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-43"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar"
          style="height: 126px;"
        >
          <strong
            class="price"
          >
            <span>
              272 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-44"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              278 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-44"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar"
          style="height: 140px;"
        >
          <strong
            class="price"
          >
            <span>
              278 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-45"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              276 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-45"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar"
          style="height: 135px;"
        >
          <strong
            class="price"
          >
            <span>
              276 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-46"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              267 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-46"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar_notInRange"
          style="height: 114px;"
        >
          <strong
            class="price"
          >
            <span>
              267 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-47"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              263 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-47"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar_notInRange"
          style="height: 105px;"
        >
          <strong
            class="price"
          >
            <span>
              263 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-48"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              274 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-48"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar_notInRange"
          style="height: 130px;"
        >
          <strong
            class="price"
          >
            <span>
              274 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-49"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              240 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-49"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar_cheapest"
          style="height: 31px;"
        >
          <strong
            class="price"
          >
            <span>
              240 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-50"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              261 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-50"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar_notInRange"
          style="height: 31px;"
        >
          <strong
            class="price"
          >
            <span>
              261 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-51"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              282 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-51"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar_notInRange"
          style="height: 31px;"
        >
          <strong
            class="price"
          >
            <span>
              282 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="loading_wrapper"
    >
      <div
        class="bar_loading"
      >
        <div
          class="loading medium"
        >
          <svg
            class="svg"
            viewBox="0 0 150 150"
            x="0"
            y="0"
          >
            <circle
              class="circle"
              cx="75"
              cy="75"
              r="60"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="loading_wrapper"
    >
      <div
        class="bar_loading"
      >
        <div
          class="loading medium"
        >
          <svg
            class="svg"
            viewBox="0 0 150 150"
            x="0"
            y="0"
          >
            <circle
              class="circle"
              cx="75"
              cy="75"
              r="60"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="loading_wrapper"
    >
      <div
        class="bar_loading"
      >
        <div
          class="loading medium"
        >
          <svg
            class="svg"
            viewBox="0 0 150 150"
            x="0"
            y="0"
          >
            <circle
              class="circle"
              cx="75"
              cy="75"
              r="60"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="loading_wrapper"
    >
      <div
        class="bar_loading"
      >
        <div
          class="loading medium"
        >
          <svg
            class="svg"
            viewBox="0 0 150 150"
            x="0"
            y="0"
          >
            <circle
              class="circle"
              cx="75"
              cy="75"
              r="60"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="axisContainer"
  >
    <button
      class="button"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="icon"
        viewBox="0 0 512 512"
      >
        <path
          d="M425 430L249 255 426 80 346 0 87 259l253 253 85-82z"
        />
      </svg>
    </button>
    <div
      class="axis"
    >
      <time
        class="label"
        datetime="2019-10-22"
      >
        Di 22.10.
      </time>
      <time
        class="label"
        datetime="2019-10-23"
      >
        Mi 23.10.
      </time>
      <time
        class="label"
        datetime="2019-10-24"
      >
        Do 24.10.
      </time>
      <time
        class="label"
        datetime="2019-10-25"
      >
        Fr 25.10.
      </time>
      <time
        class="label"
        datetime="2019-10-26"
      >
        Sa 26.10.
      </time>
      <time
        class="label"
        datetime="2019-10-27"
      >
        So 27.10.
      </time>
      <time
        class="label"
        datetime="2019-10-28"
      >
        Mo 28.10.
      </time>
      <time
        class="label"
        datetime="2019-10-29"
      >
        Di 29.10.
      </time>
      <time
        class="label"
        datetime="2019-10-30"
      >
        Mi 30.10.
      </time>
      <time
        class="label"
        datetime="2019-10-31"
      >
        Do 31.10.
      </time>
      <time
        class="label"
        datetime="2019-11-01"
      >
        Fr 01.11.
      </time>
      <time
        class="label"
        datetime="2019-11-02"
      >
        Sa 02.11.
      </time>
      <time
        class="label"
        datetime="2019-11-03"
      >
        So 03.11.
      </time>
      <time
        class="label"
        datetime="2019-11-04"
      >
        Mo 04.11.
      </time>
    </div>
    <button
      class="button"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="icon"
        viewBox="0 0 512 512"
      >
        <path
          d="M88 82l176 176L87 432l80 80 259-259L173 0 88 82z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`PriceHistory navigates to prev view 1`] = `
<div
  class="container"
>
  <h2
    class="_styling-h2"
  >
    Preisverlauf
  </h2>
  <div
    class="chart"
  >
    <div
      class="loading_wrapper"
    >
      <div
        class="bar_loading"
      >
        <div
          class="loading medium"
        >
          <svg
            class="svg"
            viewBox="0 0 150 150"
            x="0"
            y="0"
          >
            <circle
              class="circle"
              cx="75"
              cy="75"
              r="60"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="loading_wrapper"
    >
      <div
        class="bar_loading"
      >
        <div
          class="loading medium"
        >
          <svg
            class="svg"
            viewBox="0 0 150 150"
            x="0"
            y="0"
          >
            <circle
              class="circle"
              cx="75"
              cy="75"
              r="60"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="loading_wrapper"
    >
      <div
        class="bar_loading"
      >
        <div
          class="loading medium"
        >
          <svg
            class="svg"
            viewBox="0 0 150 150"
            x="0"
            y="0"
          >
            <circle
              class="circle"
              cx="75"
              cy="75"
              r="60"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="loading_wrapper"
    >
      <div
        class="bar_loading"
      >
        <div
          class="loading medium"
        >
          <svg
            class="svg"
            viewBox="0 0 150 150"
            x="0"
            y="0"
          >
            <circle
              class="circle"
              cx="75"
              cy="75"
              r="60"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="loading_wrapper"
    >
      <div
        class="bar_loading"
      >
        <div
          class="loading medium"
        >
          <svg
            class="svg"
            viewBox="0 0 150 150"
            x="0"
            y="0"
          >
            <circle
              class="circle"
              cx="75"
              cy="75"
              r="60"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="loading_wrapper"
    >
      <div
        class="bar_loading"
      >
        <div
          class="loading medium"
        >
          <svg
            class="svg"
            viewBox="0 0 150 150"
            x="0"
            y="0"
          >
            <circle
              class="circle"
              cx="75"
              cy="75"
              r="60"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="loading_wrapper"
    >
      <div
        class="bar_loading"
      >
        <div
          class="loading medium"
        >
          <svg
            class="svg"
            viewBox="0 0 150 150"
            x="0"
            y="0"
          >
            <circle
              class="circle"
              cx="75"
              cy="75"
              r="60"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-21"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              259 CHF
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-21"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar_notInRange"
          style="height: 49px;"
        >
          <strong
            class="price"
          >
            <span>
              259 CHF
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-22"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              235 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-22"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar_cheapest"
          style="height: 40px;"
        >
          <strong
            class="price"
          >
            <span>
              235 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-23"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              260 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-23"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar"
          style="height: 98px;"
        >
          <strong
            class="price"
          >
            <span>
              260 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-24"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              261 €
            </span>
             p.P.
          </div>
          4 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-24"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar"
          style="height: 100px;"
        >
          <strong
            class="price"
          >
            <span>
              261 €
            </span>
          </strong>
          <div>
            4 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-25"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              254 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-25"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar"
          style="height: 84px;"
        >
          <strong
            class="price"
          >
            <span>
              254 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-26"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              239 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-26"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar"
          style="height: 49px;"
        >
          <strong
            class="price"
          >
            <span>
              239 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-27"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              239 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-27"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar"
          style="height: 49px;"
        >
          <strong
            class="price"
          >
            <span>
              239 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
  </div>
  <div
    class="axisContainer"
  >
    <button
      class="button"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="icon"
        viewBox="0 0 512 512"
      >
        <path
          d="M425 430L249 255 426 80 346 0 87 259l253 253 85-82z"
        />
      </svg>
    </button>
    <div
      class="axis"
    >
      <time
        class="label"
        datetime="2019-10-08"
      >
        Di 08.10.
      </time>
      <time
        class="label"
        datetime="2019-10-09"
      >
        Mi 09.10.
      </time>
      <time
        class="label"
        datetime="2019-10-10"
      >
        Do 10.10.
      </time>
      <time
        class="label"
        datetime="2019-10-11"
      >
        Fr 11.10.
      </time>
      <time
        class="label"
        datetime="2019-10-12"
      >
        Sa 12.10.
      </time>
      <time
        class="label"
        datetime="2019-10-13"
      >
        So 13.10.
      </time>
      <time
        class="label"
        datetime="2019-10-14"
      >
        Mo 14.10.
      </time>
      <time
        class="label"
        datetime="2019-10-15"
      >
        Di 15.10.
      </time>
      <time
        class="label"
        datetime="2019-10-16"
      >
        Mi 16.10.
      </time>
      <time
        class="label"
        datetime="2019-10-17"
      >
        Do 17.10.
      </time>
      <time
        class="label"
        datetime="2019-10-18"
      >
        Fr 18.10.
      </time>
      <time
        class="label"
        datetime="2019-10-19"
      >
        Sa 19.10.
      </time>
      <time
        class="label"
        datetime="2019-10-20"
      >
        So 20.10.
      </time>
      <time
        class="label"
        datetime="2019-10-21"
      >
        Mo 21.10.
      </time>
    </div>
    <button
      class="button"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="icon"
        viewBox="0 0 512 512"
      >
        <path
          d="M88 82l176 176L87 432l80 80 259-259L173 0 88 82z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`PriceHistory renders 1`] = `
<div
  class="container"
>
  <h2
    class="_styling-h2"
  >
    Preisverlauf
  </h2>
  <div
    class="chart"
  >
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-0"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              259 CHF
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-0"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar_notInRange"
          style="height: 31px;"
        >
          <strong
            class="price"
          >
            <span>
              259 CHF
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-1"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              235 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-1"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar_cheapest"
          style="height: 31px;"
        >
          <strong
            class="price"
          >
            <span>
              235 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-2"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              260 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-2"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar"
          style="height: 31px;"
        >
          <strong
            class="price"
          >
            <span>
              260 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-3"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              261 €
            </span>
             p.P.
          </div>
          4 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-3"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar"
          style="height: 31px;"
        >
          <strong
            class="price"
          >
            <span>
              261 €
            </span>
          </strong>
          <div>
            4 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-4"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              254 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-4"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar"
          style="height: 31px;"
        >
          <strong
            class="price"
          >
            <span>
              254 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-5"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              239 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-5"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar"
          style="height: 31px;"
        >
          <strong
            class="price"
          >
            <span>
              239 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-6"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              239 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-6"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar"
          style="height: 31px;"
        >
          <strong
            class="price"
          >
            <span>
              239 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-7"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              250 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-7"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar"
          style="height: 31px;"
        >
          <strong
            class="price"
          >
            <span>
              250 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-8"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              272 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-8"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar"
          style="height: 31px;"
        >
          <strong
            class="price"
          >
            <span>
              272 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-9"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              278 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-9"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar"
          style="height: 31px;"
        >
          <strong
            class="price"
          >
            <span>
              278 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-10"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              276 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-10"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar"
          style="height: 31px;"
        >
          <strong
            class="price"
          >
            <span>
              276 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-11"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              267 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-11"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar_notInRange"
          style="height: 31px;"
        >
          <strong
            class="price"
          >
            <span>
              267 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-12"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              263 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-12"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar_notInRange"
          style="height: 31px;"
        >
          <strong
            class="price"
          >
            <span>
              263 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
    <div
      class="tooltip"
    >
      <div
        class="tooltip__message tooltip__message--arrow-top tooltip"
        id="tooltip-13"
        role="tooltip"
      >
        <div
          class="nobreak"
        >
          <div
            class="nobreak"
          >
            ab
             
            <span>
              274 €
            </span>
             p.P.
          </div>
          3 Tage
        </div>
      </div>
      <button
        aria-describedby="tooltip-13"
        class="tooltip__button"
        type="button"
      >
        <div
          class="bar_notInRange"
          style="height: 31px;"
        >
          <strong
            class="price"
          >
            <span>
              274 €
            </span>
          </strong>
          <div>
            3 Tage
          </div>
        </div>
      </button>
    </div>
  </div>
  <div
    class="axisContainer"
  >
    <button
      class="button"
    >
      <svg
        aria-hidden="true"
        class="icon"
        viewBox="0 0 512 512"
      >
        <path
          d="M425 430L249 255 426 80 346 0 87 259l253 253 85-82z"
        />
      </svg>
    </button>
    <div
      class="axis"
    >
      <time
        class="label"
        datetime="2019-10-15"
      >
        Di 15.10.
      </time>
      <time
        class="label"
        datetime="2019-10-16"
      >
        Mi 16.10.
      </time>
      <time
        class="label"
        datetime="2019-10-17"
      >
        Do 17.10.
      </time>
      <time
        class="label"
        datetime="2019-10-18"
      >
        Fr 18.10.
      </time>
      <time
        class="label"
        datetime="2019-10-19"
      >
        Sa 19.10.
      </time>
      <time
        class="label"
        datetime="2019-10-20"
      >
        So 20.10.
      </time>
      <time
        class="label"
        datetime="2019-10-21"
      >
        Mo 21.10.
      </time>
      <time
        class="label"
        datetime="2019-10-22"
      >
        Di 22.10.
      </time>
      <time
        class="label"
        datetime="2019-10-23"
      >
        Mi 23.10.
      </time>
      <time
        class="label"
        datetime="2019-10-24"
      >
        Do 24.10.
      </time>
      <time
        class="label"
        datetime="2019-10-25"
      >
        Fr 25.10.
      </time>
      <time
        class="label"
        datetime="2019-10-26"
      >
        Sa 26.10.
      </time>
      <time
        class="label"
        datetime="2019-10-27"
      >
        So 27.10.
      </time>
      <time
        class="label"
        datetime="2019-10-28"
      >
        Mo 28.10.
      </time>
    </div>
    <button
      class="button"
    >
      <svg
        aria-hidden="true"
        class="icon"
        viewBox="0 0 512 512"
      >
        <path
          d="M88 82l176 176L87 432l80 80 259-259L173 0 88 82z"
        />
      </svg>
    </button>
  </div>
</div>
`;
